2012-05-17  Jim Krehl  <jimmyk@jimmyk.org>
	* Initial version, supports most yaml formats.