@@ -1,4 +1,4 @@
-AC_INIT([libglib-yaml], [1.0.0], [])
+AC_INIT([libglib-yaml], [1.0.1], [])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
 AC_PROG_CC
