@@ -1,1 +1,5 @@
 howdy: hi
+%YAML 1.1
+---
+yeah: boy-ee
+...
